--- a/todo-app-client/src/containers/Home.css
+++ b/todo-app-client/src/containers/Home.css
@@ -3,7 +3,15 @@
     text-align: center;
 }
 
+.Home .home-items h1 {
+    margin: 20px ;
+}
+
 .Home .lander h1 {
     font-family: "Quicksand", sans-serif;
     font-weight: 600;
+}
+
+.Home .items {
+    margin: 20px auto;
 }
